@@ -1,3 +1,13 @@
+2012-04-20  Nikodemus Siivola  <nikodemus@random-state.net>
+
+	* swank-sbcl.lisp (swank-value): New function, makes it easy to
+	refer to variables in SWANK -- which doesn't exist when the
+	backend is loaded.
+	(lisp-source-location): One of the strings being interned was
+	downcased. Fix using SWANK-VALUE.
+	(make-socket-io-stream): Use SWANK-VALUE instead of INTERN &
+	SYMBOL-VALUE.
+
 2012-04-11  Helmut Eller  <heller@common-lisp.net>
 
 	* slime.el ([test] utf-8-source): Use the encoded byte sequence of
